--- a/src/main/resources/templates/navbar.html
+++ b/src/main/resources/templates/navbar.html
@@ -17,6 +17,9 @@
       <li class="nav-item">
         <a class="nav-link" th:href="@{/lista-usuario}">Listar usuários</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" th:href="@{/lista-equipamento}">Listar equipamento</a>
+      </li>
     </ul>
   </div>
   <form class="form-inline" th:action="@{/logout}" th:method="post">
