feat: lista colaborador controller and html

--- a/src/main/resources/templates/navbar.html
+++ b/src/main/resources/templates/navbar.html
@@ -15,6 +15,10 @@
         <a class="nav-link" th:href="@{/home}">Home</a>
       </li>
       <li class="nav-item">
+        <a class="nav-link" th:href="@{/lista-colaboraor}">Listar colaborador</a>
+      </li>
+    </ul>
+      <li class="nav-item">
         <a class="nav-link" th:href="@{/lista-usuario}">Listar usuários</a>
       </li>
       <li class="nav-item">
