feat: format date

--- a/src/main/resources/templates/listacolaborador.html
+++ b/src/main/resources/templates/listacolaborador.html
@@ -34,9 +34,9 @@
                 <th scope="col">Ações</th>
                 <th scope="col">ID</th>
                 <th scope="col">Nome</th>
-                <th scope="col">Email</th>
+                <th scope="col">E-mail</th>
                 <th scope="col">Cargo</th>
-                <th scope="col">DataNascimento</th>
+                <th scope="col">Data de nascimento</th>
             </tr>
             </thead>
             <tbody>
@@ -52,7 +52,7 @@
                 <td th:text="${colaborador.nome}"></td>
                 <td th:text="${colaborador.email}"></td>
                 <td th:text="${colaborador.cargo}"></td>
-                <td th:text="${colaborador.dataNascimento}"></td>
+                <td th:text="${colaborador.dataNascimentoFormatada}"></td>
             </tr>
             </tbody>
 
