--- a/src/main/resources/templates/navbar.html
+++ b/src/main/resources/templates/navbar.html
@@ -15,7 +15,7 @@
         <a class="nav-link" th:href="@{/home}">Home</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" th:href="@{/lista-colaboraor}">Listar colaborador</a>
+        <a class="nav-link" th:href="@{/lista-colaborador}">Listar colaborador</a>
       </li>
     </ul>
       <li class="nav-item">
