--- a/src/main/resources/templates/visualizarcadastroequipamento.html
+++ b/src/main/resources/templates/visualizarcadastroequipamento.html
@@ -29,7 +29,7 @@
                 </div>
 
                 <div class="mb-3">
-                    <label for="equipamento_tipo" class="form-label">Tipo</label>
+                    <label for="equipamento_tipo" class="form-label">Tipo de equipamento</label>
                     <input th:field="*{tipo}" type="text" class="form-control" id="equipamento_tipo" name="equipamento_tipo" placeholder="Informe tipo / categoria de equipamento" disabled />
                 </div>
 
