feat: queries and nav bar

--- a/src/main/resources/templates/navbar.html
+++ b/src/main/resources/templates/navbar.html
@@ -18,10 +18,13 @@
         <a class="nav-link" th:href="@{/lista-colaborador}">Listar colaborador</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" th:href="@{/lista-usuario}">Listar usuários</a>
+        <a class="nav-link" th:href="@{/lista-emprestimo}">Listar emprestimo</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" th:href="@{/lista-equipamento}">Listar equipamento</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" th:href="@{/lista-usuario}">Listar usuários</a>
       </li>
     </ul>
   </div>
