feat: emprestar controller and service

--- a/src/main/resources/templates/navbar.html
+++ b/src/main/resources/templates/navbar.html
@@ -15,13 +15,13 @@
         <a class="nav-link" th:href="@{/home}">Home</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" th:href="@{/lista-colaborador}">Listar colaborador</a>
+        <a class="nav-link" th:href="@{/lista-colaborador}">Listar colaboradores</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" th:href="@{/lista-emprestimo}">Listar emprestimo</a>
+        <a class="nav-link" th:href="@{/lista-emprestimo}">Histórico de empréstimos</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" th:href="@{/lista-equipamento}">Listar equipamento</a>
+        <a class="nav-link" th:href="@{/lista-equipamento}">Listar equipamentos</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" th:href="@{/lista-usuario}">Listar usuários</a>
