--- a/src/main/resources/templates/cadastroemprestimo.html
+++ b/src/main/resources/templates/cadastroemprestimo.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Cadastrar emprestimo</title>
+  <title>Cadastrar empréstimo</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"/>
 </head>
 <body class="bg-light">
@@ -12,9 +12,9 @@
 
 <div class="container mt-5 d-flex justify-content-center">
   <div class="card shadow w-50">
-    <div class="card-header bg-primary text-white text-center">
-      <h5>Registrar emprestimo</h5>
-    </div>
+<!--    <div class="card-header bg-primary text-white text-center">-->
+<!--      <h5>Realizar empréstimo</h5>-->
+<!--    </div>-->
     <div class="card-body">
 
       <div th:if="${erro}" class="alert alert-danger" role="alert">
@@ -22,6 +22,12 @@
       </div>
 
       <form th:action="@{/cadastro-emprestimo}" method="post" th:object="${emprestimoRequestDTO}">
+
+        <div class="mb-3">
+          <label for="data_emprestimo" class="form-label">Data de empréstimo</label>
+          <input th:field="*{dataEmprestimo}" type="date" class="form-control" id="data_emprestimo" name="data_emprestimo" disabled />
+        </div>
+
 
         <div class="mb-3">
           <label for="colaborador" class="form-label">Colaborador</label>
@@ -40,12 +46,7 @@
         </div>
 
         <div class="mb-3">
-          <label for="data_emprestimo" class="form-label">Data de Emprestimo</label>
-          <input th:field="*{dataEmprestimo}" type="date" class="form-control" id="data_emprestimo" name="data_emprestimo" required />
-        </div>
-
-        <div class="mb-3">
-          <label for="data_devolucao" class="form-label">Data de Devolução</label>
+          <label for="data_devolucao" class="form-label">Data de devolução</label>
           <input th:field="*{dataDevolucao}" type="date" class="form-control" id="data_devolucao" name="data_devolucao" disabled />
         </div>
 
