--- a/src/main/resources/templates/listaemprestimo.html
+++ b/src/main/resources/templates/listaemprestimo.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Listar emprestimos</title>
+    <title>Histórico de empréstimos</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
 </head>
 <body class="bg-light">
@@ -11,10 +11,10 @@
 <div th:insert="~{navbar :: navigation}" class="nav-wrapper"></div>
 
 <div class="container mt-3">
-    <h1 class="mb-4 text-center">Lista de emprestimos</h1>
+    <h1 class="mb-4 text-center">Histórico de empréstimos</h1>
 
     <div th:if="${param.sucesso}" class="alert alert-info" role="alert">
-        <span class="mensagem">Emprestimo cadastrado com sucesso!</span>
+        <span class="mensagem">Empréstimo cadastrado com sucesso!</span>
     </div>
 
     <div th:if="${erro}" class="alert alert-danger" role="alert">
@@ -22,8 +22,8 @@
     </div>
 
     <div class="mb-3 text-end">
-        <a th:href="@{/cadastro-emprestimo}" class="btn btn-success">
-            Novo emprestimo
+        <a th:href="@{/cadastro-emprestimo}" class="btn btn-primary">
+            Emprestar equipamento
         </a>
     </div>
 
@@ -35,9 +35,8 @@
                 <th scope="col">ID</th>
                 <th scope="col">Colaborador</th>
                 <th scope="col">Equipamento</th>
-                <th scope="col">Data de emprestimo</th>
+                <th scope="col">Data de empréstimo</th>
                 <th scope="col">Data de devolução</th>
-                <th scope="col">Observação</th>
             </tr>
             </thead>
             <tbody>
@@ -45,15 +44,14 @@
                 <td>
                     <div class="d-flex justify-content-center gap-2">
                         <a th:href="@{'/visualizar-emprestimo/' + ${emprestimo.id}}" class="btn btn-secondary">Visualizar</a>
-                        <a th:href="@{'/atualizar-emprestimo/' + ${emprestimo.id}}" class="btn btn-primary">Editar</a>
-                        <a th:data-emprestimo-id="${emprestimo.id}" class="delete-emprestimo btn btn-danger">Excluir</a>
+                        <a th:href="@{'/devolver-equipamento/' + ${emprestimo.id}}" class="btn btn-danger">Devolver</a>
                     </div>
                 </td>
                 <td th:text="${emprestimo.id}"></td>
-                <td th:text="${emprestimo.colaborador}"></td>
-                <td th:text="${emprestimo.equipamento}"></td>
-                <td th:text="${emprestimo.dataEmprestimo}"></td>
-                <td th:text="${colaborador.dataDevolucao}"></td>
+                <td th:text="${emprestimo.nomeColaborador}"></td>
+                <td th:text="${emprestimo.tipoEquipamento}"></td>
+                <td th:text="${emprestimo.dataEmprestimoFormatada}"></td>
+                <td th:text="${emprestimo.dataDevolucaoFormatada}"></td>
             </tr>
             </tbody>
 
