--- a/src/main/resources/templates/cadastroemprestimo.html
+++ b/src/main/resources/templates/cadastroemprestimo.html
@@ -12,9 +12,9 @@
 
 <div class="container mt-5 d-flex justify-content-center">
   <div class="card shadow w-50">
-<!--    <div class="card-header bg-primary text-white text-center">-->
-<!--      <h5>Realizar empréstimo</h5>-->
-<!--    </div>-->
+    <div class="card-header bg-primary text-white text-center">
+      <h5>Emprestar equipamento</h5>
+    </div>
     <div class="card-body">
 
       <div th:if="${erro}" class="alert alert-danger" role="alert">
