--- a/src/main/resources/templates/visualizarcadastroequipamento.html
+++ b/src/main/resources/templates/visualizarcadastroequipamento.html
@@ -39,7 +39,7 @@
 
                 <div class="text-center mt-4">
                     <button type="submit" class="btn btn-primary" disabled>Salvar</button>
-                    <a th:href="@{/lista-equipamento}" class="btn btn-secondary ms-2">Cancelar</a>
+                    <a th:href="@{/lista-equipamento}" class="btn btn-secondary ms-2">Voltar</a>
                 </div>             
             </form>
         </div>
