--- a/src/main/resources/templates/listaemprestimo.html
+++ b/src/main/resources/templates/listaemprestimo.html
@@ -47,7 +47,7 @@
             <tr th:each="emprestimo : ${emprestimoListaDTO}">
                 <td>
                     <div class="d-flex justify-content-center gap-2">
-                        <a th:href="@{'/visualizar-emprestimo/' + ${emprestimo.id}}" class="btn btn-secondary">Visualizar</a>
+                        <a th:href="@{'/visualizar-historico/' + ${emprestimo.id}}" class="btn btn-secondary">Visualizar detalhes</a>
                         <a th:if="${emprestimo.dataDevolucaoFormatada != null}"
                            th:href="@{'/devolver-equipamento/' + ${emprestimo.id}}"
                            class="btn btn-danger">Devolver
