--- a/src/main/resources/templates/visualizarcadastrocolaborador.html
+++ b/src/main/resources/templates/visualizarcadastrocolaborador.html
@@ -47,14 +47,12 @@
 
                 <div class="mb-3">
                     <label for="colaborador_data_nascimento" class="form-label">Data de Nascimento</label>
-<!--                    <input th:field="*{dataNascimento}" type="date" class="form-control" id="colaborador_data_nascimento" name="colaborador_data_nascimento" required />-->
-                    <input th:value="${#temporals.format(visualizarColaboradorDTO.dataNascimento, 'dd/MM/yyyy')}" type="date" class="form-control" id="colaborador_data_nascimento" name="colaborador_data_nascimento" disabled />
-
+                    <input th:field="*{dataNascimento}" type="text" class="form-control" id="colaborador_data_nascimento" name="colaborador_data_nascimento" disabled />
                 </div>
 
                 <div class="text-center mt-4">
                     <button type="submit" class="btn btn-primary" disabled>Salvar</button>
-                    <a th:href="@{/lista-colaborador}" class="btn btn-secondary ms-2">Cancelar</a>
+                    <a th:href="@{/lista-colaborador}" class="btn btn-secondary ms-2">Voltar</a>
                 </div>             
             </form>
         </div>
