--- a/src/main/resources/templates/visualizarcadastrousuario.html
+++ b/src/main/resources/templates/visualizarcadastrousuario.html
@@ -41,7 +41,7 @@
 
                 <div class="text-center mt-4">
                     <button type="submit" class="btn btn-primary" disabled>Salvar</button>
-                    <a th:href="@{/lista-usuario}" class="btn btn-secondary ms-2">Cancelar</a>
+                    <a th:href="@{/lista-usuario}" class="btn btn-secondary ms-2">Voltar</a>
                 </div>
 
             </form>
