feat: adjust devolucao controller

--- a/src/main/resources/templates/cadastrodevolucao.html
+++ b/src/main/resources/templates/cadastrodevolucao.html
@@ -40,13 +40,13 @@
 
         <div class="mb-3">
           <label for="devolucao_colaborador" class="form-label">Colaborador</label>
-          <input th:field="*{colaboradorId}" type="text" class="form-control" id="devolucao_colaborador" name="devolucao_colaborador" disabled />
+          <input th:field="*{nomeColaborador}" type="text" class="form-control" id="devolucao_colaborador" name="devolucao_colaborador" disabled />
           </select>
         </div>
 
         <div class="mb-3">
           <label for="devolucao_tipo_equipamento" class="form-label">Equipamento</label>
-          <input th:field="*{equipamentoId}" type="text" class="form-control" id="devolucao_tipo_equipamento" name="devolucao_tipo_equipamento" disabled />
+          <input th:field="*{tipoEquipamento}" type="text" class="form-control" id="devolucao_tipo_equipamento" name="devolucao_tipo_equipamento" disabled />
           </select>
         </div>
 
