--- a/src/main/resources/templates/listaemprestimo.html
+++ b/src/main/resources/templates/listaemprestimo.html
@@ -29,7 +29,15 @@
         <a th:href="@{/cadastro-emprestimo}" class="btn btn-primary">
             Emprestar equipamento
         </a>
+
+        <!-- Scanner do QR Code -->
+        <button type="button" class="btn btn-success" onclick="startScanner()">
+            📷 Devolver por QR Code
+        </button>
     </div>
+
+    <!-- Scanner do QR Code -->
+    <div id="qr-reader" style="width: 100%; max-width: 400px; margin: 0 auto; display: none;"></div>
 
     <div class="table-responsive">
         <table class="table table-bordered table-hover align-middle text-center">
@@ -39,6 +47,7 @@
                 <th scope="col">ID</th>
                 <th scope="col">Colaborador</th>
                 <th scope="col">Equipamento</th>
+                <th scope="col">Status</th>
                 <th scope="col">Data de empréstimo</th>
                 <th scope="col">Data de devolução</th>
             </tr>
@@ -48,26 +57,53 @@
                 <td>
                     <div class="d-flex justify-content-center gap-2">
                         <a th:href="@{'/visualizar-historico/' + ${emprestimo.id}}" class="btn btn-secondary">Visualizar detalhes</a>
-                        <a th:if="${emprestimo.dataDevolucaoFormatada != null}"
-                           th:href="@{'/devolver-equipamento/' + ${emprestimo.id}}"
+                        <a th:if="${emprestimo.devolucao == false}"
+                           th:href="@{'/devolucao/qrcode/' + ${emprestimo.id}}"
                            class="btn btn-danger">Devolver
                         </a>
+                        <button type="button"
+                                class="btn btn-outline-primary"
+                                data-bs-toggle="modal"
+                                th:attr="data-bs-target='#qrCodeModal_' + ${emprestimo.id}">
+                            Ver QR Code
+                        </button>
                     </div>
                 </td>
                 <td th:text="${emprestimo.id}"></td>
                 <td th:text="${emprestimo.nomeColaborador}"></td>
                 <td th:text="${emprestimo.tipoEquipamento}"></td>
+                <td th:text="${emprestimo.devolvido} ? 'Devolvido' : 'Em empréstimo'"></td>
                 <td th:text="${emprestimo.dataEmprestimoFormatada}"></td>
                 <td th:text="${emprestimo.dataDevolucaoFormatada}"></td>
             </tr>
             </tbody>
 
         </table>
+
+        <div th:each="emprestimo : ${emprestimoListaDTO}">
+            <div class="modal fade" th:id="'qrCodeModal_' + ${emprestimo.id}" tabindex="-1" aria-hidden="true">
+                <div class="modal-dialog modal-dialog-centered">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title">QR Code do Empréstimo ID <span th:text="${emprestimo.id}"></span></h5>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Fechar"></button>
+                        </div>
+                        <div class="modal-body text-center">
+                            <img th:src="@{'/devolucao/qrcode/imagem/' + ${emprestimo.id}}" alt="QR Code" class="img-fluid"/>
+                            <p class="mt-3">Escaneie para acessar a devolução.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
     </div>
 </div>
 
 <script src="/script.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+<script src="https://unpkg.com/html5-qrcode" type="text/javascript"></script>
 
 </body>
 </html>
