--- a/src/main/resources/templates/listaemprestimo.html
+++ b/src/main/resources/templates/listaemprestimo.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Histórico de empréstimos</title>
+    <link rel="stylesheet" href="../static/styles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
 </head>
 <body class="bg-light">
@@ -57,16 +58,16 @@
                 <td>
                     <div class="d-flex justify-content-center gap-2">
                         <a th:href="@{'/visualizar-historico/' + ${emprestimo.id}}" class="btn btn-secondary">Visualizar detalhes</a>
-                        <a th:if="${emprestimo.devolucao == false}"
-                           th:href="@{'/devolucao/qrcode/' + ${emprestimo.id}}"
-                           class="btn btn-danger">Devolver
-                        </a>
                         <button type="button"
                                 class="btn btn-outline-primary"
                                 data-bs-toggle="modal"
                                 th:attr="data-bs-target='#qrCodeModal_' + ${emprestimo.id}">
                             Ver QR Code
                         </button>
+                        </a>  <a th:if="${emprestimo.devolvido == false}"
+                           th:href="@{'/devolver-equipamento/' + ${emprestimo.id}}"
+                           class="btn btn-danger">Devolver
+                        </a>
                     </div>
                 </td>
                 <td th:text="${emprestimo.id}"></td>
@@ -85,7 +86,7 @@
                 <div class="modal-dialog modal-dialog-centered">
                     <div class="modal-content">
                         <div class="modal-header">
-                            <h5 class="modal-title">QR Code do Empréstimo ID <span th:text="${emprestimo.id}"></span></h5>
+                            <h5 class="modal-title">QR Code ID <span th:text="${emprestimo.id}"></span> - Equipamento: <span th:text="${emprestimo.tipoEquipamento}"></span> </h5>
                             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Fechar"></button>
                         </div>
                         <div class="modal-body text-center">
