--- a/src/main/resources/templates/listaemprestimo.html
+++ b/src/main/resources/templates/listaemprestimo.html
@@ -91,7 +91,8 @@
                         </div>
                         <div class="modal-body text-center">
 <!--                            <img th:src="@{'/devolucao/qrcode/imagem/' + ${emprestimo.id}}" alt="QR Code" class="img-fluid"/>-->
-                            <img src="https://api.qrserver.com/v1/create-qr-code/?data=http://192.168.100.10:8080/devolucao/qrcode/10&size=300x300" alt="QR Code Demo">
+                            <img th:src="@{'https://api.qrserver.com/v1/create-qr-code/?data=http://192.168.100.10:8080/devolucao/qrcode/' + ${emprestimo.id} + '&size=300x300'}" alt="QR Code">
+
                             <p class="mt-3">Escaneie para acessar a devolução.</p>
                         </div>
                     </div>
