--- a/src/main/resources/templates/cadastrodevolucao.html
+++ b/src/main/resources/templates/cadastrodevolucao.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Realizar devolução</title>
+  <title>Devolver equipamento</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"/>
 </head>
 <body class="bg-light">
@@ -25,7 +25,7 @@
         <span class="mensagem" th:text="${erro}">Erro</span>
       </div>
 
-      <form th:action="@{'/devolver-equipamento/' + ${devolverRequestDTO.id}}" method="post" th:object="${devolverRequestDTO}">
+      <form th:action="@{'/devolver-equipamento/' + ${devolucaoRequestDTO.id}}" method="post" th:object="${devolucaoRequestDTO}">
 
         <div class="mb-3">
           <label for="devolucao_emprestimo_id" class="form-label">ID</label>
