--- a/src/main/resources/templates/loginusuario.html
+++ b/src/main/resources/templates/loginusuario.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- Favicon -->
-  <link rel="icon" type="image/png" href="/images/loginusuario.png">
+  <link rel="icon" type="image/png" href="/images/icone-login.png">
 
 
   <!-- Adicionar o Bootstrap na página-->
