--- a/src/main/resources/templates/navbar.html
+++ b/src/main/resources/templates/navbar.html
@@ -2,15 +2,17 @@
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 
 <body>
-<!--COLOCAR LOGO-->
-<nav th:fragment="navigation" class="navbar navbar-expand-md navbar-dark bg-dark">
-  <a class="navbar-brand" href="#">Navbar</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+<nav th:fragment="navigation" class="navbar navbar-expand-md navbar-light bg-white">
+  <a class="navbar-brand ms-3" th:href="@{/home}">
+    <img th:src="@{/images/logo-monitoraAi.png}" alt="MonitoraAi Logo" height="100" width="100" class="d-inline-block align-top">
+  </a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
+
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
-      <li class="nav-item active">
       <li class="nav-item active">
         <a class="nav-link" th:href="@{/home}">Home</a>
       </li>
@@ -28,10 +30,10 @@
       </li>
     </ul>
   </div>
-  <form class="form-inline" th:action="@{/logout}" th:method="post">
-    <button class="btn btn-outline-light my-2 my-sm-0" type="submit">Logout</button>
-  </form>
-</nav>
 
+<form class="form-inline me-3" th:action="@{/logout}" th:method="post">
+  <button class="btn btn-outline-dark my-2 my-sm-0" type="submit">Logout</button>
+</form>
+</nav>
 </body>
 </html>
