--- a/src/main/resources/templates/cadastrocolaborador.html
+++ b/src/main/resources/templates/cadastrocolaborador.html
@@ -42,7 +42,7 @@
 
         <div class="mb-3">
         <label for="colaborador_data_nascimento" class="form-label">Data de Nascimento</label>
-        <input th:field="*{dataNascimento}" type="text" class="form-control" id="colaborador_data_nascimento" name="colaborador_data_nascimento" placeholder="nome_colaborador@exemplo.com" required />
+        <input th:field="*{dataNascimento}" type="text" class="form-control" id="colaborador_data_nascimento" name="colaborador_data_nascimento" placeholder="01/01/1999" required />
         </div>
 
         <div class="text-center mt-4">
