--- a/src/main/resources/templates/listaemprestimo.html
+++ b/src/main/resources/templates/listaemprestimo.html
@@ -29,7 +29,7 @@
     </div>
 
     <div class="mb-3 text-end">
-        <a th:href="@{/cadastro-emprestimo}" class="btn btn-primary">
+        <a th:href="@{/cadastro-emprestimo}" class="btn btn-success">
             Emprestar equipamento
         </a>
 
