--- a/src/main/resources/templates/listacolaborador.html
+++ b/src/main/resources/templates/listacolaborador.html
@@ -19,6 +19,10 @@
         <span class="mensagem">Colaborador cadastrado com sucesso!</span>
     </div>
 
+    <div th:if="${param.sucesso_atualizacao}" class="alert alert-info" role="alert">
+        <span class="mensagem">Colaborador atualizado com sucesso!</span>
+    </div>
+
     <div th:if="${erro}" class="alert alert-danger" role="alert">
         <span class="mensagem" th:text="${erro}">Erro</span>
     </div>
