feat: color html

--- a/src/main/resources/templates/cadastrodevolucaoqrcode.html
+++ b/src/main/resources/templates/cadastrodevolucaoqrcode.html
@@ -8,28 +8,20 @@
 </head>
 <body class="bg-light">
 
-<!-- Navbar (opcional) -->
 <div th:insert="~{navbar :: navigation}" class="nav-wrapper"></div>
 
 <div class="container mt-5 d-flex justify-content-center">
   <div class="card shadow w-50">
-    <div class="card-header bg-primary text-white text-center">
+    <div class="card-header text-white text-center" style="background-color: #FF8500;">
       <h5>Devolver equipamento via QR Code</h5>
     </div>
 
     <div class="card-body">
 
-      <!-- Mensagem de sucesso -->
-      <div th:if="${param.sucesso}" class="alert alert-info" role="alert">
-        <span class="mensagem">Equipamento cadastrado/atualizado com sucesso!</span>
-      </div>
-
-      <!-- Mensagem de erro -->
       <div th:if="${erro}" class="alert alert-danger" role="alert">
         <span class="mensagem" th:text="${erro}">Erro</span>
       </div>
 
-      <!-- Formulário -->
       <form th:action="@{'/devolver-equipamento/' + ${devolverRequestDTO.id}}" method="post" th:object="${devolverRequestDTO}">
 
         <div class="mb-3">
