--- a/src/main/resources/templates/cadastroemprestimo.html
+++ b/src/main/resources/templates/cadastroemprestimo.html
@@ -14,7 +14,7 @@
 
 <div class="container mt-5 d-flex justify-content-center">
   <div class="card shadow w-50">
-    <div class="card-header bg-primary text-white text-center">
+    <div class="card-header text-white text-center" style="background-color: #FF8500;">
       <h5>Emprestar equipamento</h5>
     </div>
     <div class="card-body">
@@ -29,7 +29,6 @@
           <label for="data_emprestimo" class="form-label">Data de empréstimo</label>
           <input th:field="*{dataEmprestimo}" type="text" class="form-control" id="data_emprestimo" name="data_emprestimo" disabled />
         </div>
-
 
         <div class="mb-3">
           <label for="colaborador" class="form-label">Colaborador</label>
