--- a/src/main/resources/templates/cadastroequipamento.html
+++ b/src/main/resources/templates/cadastroequipamento.html
@@ -15,7 +15,7 @@
 <div class="container mt-5 d-flex justify-content-center">
     <div class="card shadow w-50">
 
-        <div class="card-header bg-primary text-white text-center">
+        <div class="card-header text-white text-center" style="background-color: #FF8500;">
             <h5>Cadastrar equipamento</h5>
         </div>
 
