--- a/src/main/resources/templates/atualizarcadastrocolaborador.html
+++ b/src/main/resources/templates/atualizarcadastrocolaborador.html
@@ -15,12 +15,8 @@
 
 <div class="container mt-5 d-flex justify-content-center">
     <div class="card shadow w-50">
-        <div class="card-header bg-primary text-white text-center">
+        <div class="card-header text-white text-center" style="background-color: #FF8500;">
             <h5>Atualizar colaborador</h5>
-        </div>
-        
-        <div th:if="${param.sucesso}" class="alert alert-info" role="alert">
-            <span class="mensagem">Colaborador atualizado com sucesso!</span>
         </div>
 
         <div th:if="${erro}" class="alert alert-danger" role="alert">
@@ -52,7 +48,7 @@
 
                 <div class="mb-3">
                     <label for="colaborador_data_nascimento" class="form-label">Data de Nascimento</label>
-                    <input th:field="*{dataNascimento}" type="date" class="form-control" id="colaborador_data_nascimento" name="colaborador_data_nascimento" required />
+                    <input th:field="*{dataNascimento}" type="text" class="form-control" id="colaborador_data_nascimento" name="colaborador_data_nascimento" placeholder="dd/mm/aaaa" required />
                 </div>
 
                 <div class="text-center mt-4">
