--- a/src/main/resources/templates/visualizarcadastrocolaborador.html
+++ b/src/main/resources/templates/visualizarcadastrocolaborador.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" type="image/png" href="/images/icone-visualizar.png">
 
-    <title>Visualizar equipamento</title>
+    <title>Visualizar colaborador</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
 </head>
 <body class="bg-light">
@@ -14,12 +14,12 @@
 
 <div class="container mt-5 d-flex justify-content-center">
     <div class="card shadow w-50">
-        <div class="card-header bg-primary text-white text-center">
-            <h5>Visualizar equipamento</h5>
+        <div class="card-header text-white text-center" style="background-color: #FF8500;">
+            <h5>Visualizar colaborador</h5>
         </div>
 
         <div th:if="${param.sucesso}" class="alert alert-info" role="alert">
-            <span class="mensagem">Equipamento visualizado com sucesso!</span>
+            <span class="mensagem">Colaborador visualizado com sucesso!</span>
         </div>
 
         <div class="card-body">
