--- a/src/main/resources/templates/navbar.html
+++ b/src/main/resources/templates/navbar.html
@@ -4,9 +4,9 @@
 <body>
 <nav th:fragment="navigation" class="navbar navbar-expand-md navbar-light bg-white">
   <a class="navbar-brand ms-3" th:href="@{/home}">
-    <img th:src="@{/images/logo-monitoraAi.png}" alt="MonitoraAi Logo" height="100" width="100" class="d-inline-block align-top">
+    <img th:src="@{/images/logo-monitoraAi.png}" alt="MonitoraAi Logo" height="100" width="100" class="d-inline-block align-top" />
   </a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
           aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -14,26 +14,27 @@
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
       <li class="nav-item active">
-        <a class="nav-link" th:href="@{/home}">Home</a>
+        <a class="nav-link fw-bold fs-6 link-dark" th:href="@{/home}">Home</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" th:href="@{/lista-colaborador}">Listar colaboradores</a>
+        <a class="nav-link fw-bold fs-6 link-dark" th:href="@{/lista-colaborador}">Listar colaboradores</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" th:href="@{/lista-emprestimo}">Histórico de empréstimos</a>
+        <a class="nav-link fw-bold fs-6 link-dark" th:href="@{/lista-emprestimo}">Histórico de empréstimos</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" th:href="@{/lista-equipamento}">Listar equipamentos</a>
+        <a class="nav-link fw-bold fs-6 link-dark" th:href="@{/lista-equipamento}">Listar equipamentos</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" th:href="@{/lista-usuario}">Listar usuários</a>
+        <a class="nav-link fw-bold fs-6 link-dark" th:href="@{/lista-usuario}">Listar usuários</a>
       </li>
     </ul>
   </div>
 
-<form class="form-inline me-3" th:action="@{/logout}" th:method="post">
-  <button class="btn btn-outline-dark my-2 my-sm-0" type="submit">Logout</button>
-</form>
+  <form class="form-inline me-3" th:action="@{/logout}" th:method="post">
+    <button class="btn btn-outline-dark my-2 my-sm-0" type="submit">Logout</button>
+  </form>
 </nav>
 </body>
+
 </html>
