--- a/src/main/resources/templates/listaemprestimo.html
+++ b/src/main/resources/templates/listaemprestimo.html
@@ -40,7 +40,12 @@
     </div>
 
     <!-- Scanner do QR Code -->
-    <div id="qr-reader" style="width: 100%; max-width: 400px; margin: 0 auto; display: none;"></div>
+<!--    <div id="qr-reader" style="width: 100%; max-width: 400px; margin: 0 auto; display: none;"></div>-->
+    <div id="qr-reader-container" style="position: relative; width: 100%; max-width: 400px; margin: 20px auto; display: none; border: 1px solid #ccc; border-radius: 8px; padding: 10px; background-color: white;">
+        <button type="button" class="btn-close" style="position: absolute; top: 10px; right: 10px; z-index: 10;" aria-label="Fechar" onclick="stopScanner()"></button>
+        <div id="qr-reader" style="margin-top: 40px;"></div>
+    </div>
+
 
     <div class="table-responsive">
         <table class="table table-bordered table-hover align-middle text-center">
